--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     <div class="container">
         <div class="card">
             <div class="logo-area">
-                <img src="https://drive.google.com/uc?export=view&id=12gLdwUb7VG5mAwanS2yNIcaydtL4U7vN" alt="Logo" class="logo-img">
+                <img src="https://i.postimg.cc/Cxksxrj8/x-ks'ry-x-wu-(2).png" alt="Logo" class="logo-img">
                 
                 <h1>Check Room</h1>
                 <p>กิจกรรมพุธบ่าย</p>
