Update university logo in index.html

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     <div class="container">
         <div class="card">
             <div class="logo-area">
-                <img src="https://upload.wikimedia.org/wikipedia/th/e/e3/Walailak_University_Logo.png" alt="ตรามหาวิทยาลัยวลัยลักษณ์" class="logo-img">
+                <img src="https://img5.pic.in.th/file/secure-sv1/-wu-2.png" alt="ตรามหาวิทยาลัยวลัยลักษณ์" class="logo-img">
                 
                 <h1>Check Room</h1>
                 <p>กิจกรรมพุธบ่าย</p>
