Update footer text in index.html

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             <button onclick="searchData()" id="searchBtn" class="search-btn">ค้นหาข้อมูล</button>
 
             <div class="footer">
-                ศูนย์ส่งเสริมและพัฒนานักศึกษา
+                ฝ่ายพัฒนากิจกรรมสร้างสรรค์ CSPD.WU.
             </div>
         </div>
     </div>
